# EnvSync

./: .env.example  .gitignore  CRITICAL_FIXES_REQUIRED.md  Dockerfile.web  QA_PRODUCTION_READINESS_ASSESSMENT.md  README.md  ROADMAP.md  SECURITY_ASSESSMENT.md  angular.json  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
backend/: Dockerfile  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  auth.py  deps.py  environments.py  projects.py  sso.py  sync.py  teams.py  variables.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  audit.py  integration.py  project.py  sync.py  team.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  project.py  sync.py  team.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_environments.py  test_projects.py  test_variables.py
cli/: README.md  pyproject.toml
cli/envsync/: __init__.py  client.py  config.py  crypto.py  main.py
cli/tests/: conftest.py  test_commands.py  test_config.py  test_crypto.py
e2e/api/: auth.api.spec.ts  health.api.spec.ts  projects.api.spec.ts  variables.api.spec.ts
e2e/environments/: environments.e2e.spec.ts
e2e/fixtures/: test-fixtures.ts
e2e/integration/: netlify.integration.spec.ts  veilcloud.integration.spec.ts  vercel.integration.spec.ts
e2e/pages/: dashboard-page.ts  variables-page.ts  vault-page.ts
e2e/projects/: projects.e2e.spec.ts
e2e/security/: auth-bypass.security.spec.ts  injection.security.spec.ts  session.security.spec.ts  xss.security.spec.ts
e2e/smoke/: accessibility.smoke.spec.ts  app.smoke.spec.ts  navigation.smoke.spec.ts  performance.smoke.spec.ts  vault.smoke.spec.ts
e2e/teams/: teams.e2e.spec.ts
e2e/utils/: security-utils.ts  test-utils.ts
e2e/variables/: variables.e2e.spec.ts
e2e/visual/: dashboard.visual.spec.ts  responsive.visual.spec.ts
nginx/: nginx.conf  web.conf
src/: index.html  styles.scss  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit.rs  aws.rs  commands.rs  crypto.rs  db.rs  error.rs  flyio.rs  github.rs  lib.rs  models.rs  netlify.rs  railway.rs  rate_limit.rs  sync.rs  veilcloud.rs  veilkey.rs  vercel.rs
src-tauri/tests/: audit_tests.rs  aws_tests.rs  commands_tests.rs  crypto_tests.rs  db_tests.rs  error_tests.rs  flyio_tests.rs  github_tests.rs  history_tests.rs  integration_tests.rs  models_tests.rs  netlify_tests.rs  railway_tests.rs  security_tests.rs  sync_tests.rs  team_tests.rs  veilcloud_tests.rs  veilkey_tests.rs  vercel_tests.rs
src/app/: app.html  app.spec.ts  app.ts
src/app/core/models/: index.ts
src/app/core/services/: api.service.spec.ts  api.service.ts  crypto.service.spec.ts  crypto.service.ts  diff.service.spec.ts  diff.service.ts  history.service.spec.ts  history.service.ts  platform.service.spec.ts  platform.service.ts  sync.service.spec.ts  sync.service.ts  tauri.service.spec.ts  tauri.service.ts  team.service.spec.ts  team.service.ts  vault.store.spec.ts  vault.store.ts
src/app/features/admin/: admin-console.component.ts
src/app/features/diff/: diff-view.component.ts  (+1 more)
src/environments/: environment.production.ts  environment.ts
(+17 files in other folders)
